Added material design page toggle and fixed page list details links

--- a/src/app/components/admin/admin-core/admin-navbar/admin-navbar.component.css
+++ b/src/app/components/admin/admin-core/admin-navbar/admin-navbar.component.css
@@ -2,6 +2,13 @@ img.user-image {
     max-width: 25px;
 }
 
+button.btn-default {
+    color: #a3a4a6;
+}
+
+button.btn-default:hover {
+    color: #4E5155;
+}
 
 
 /* Mobile Queries */
