--- a/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.html
+++ b/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.html
@@ -9,8 +9,7 @@
     </div>
 </div>
 
-<div class="container-fluid">
-
+<div class="container-fluid mb-5">
     <div class="row">
         <div class="col-md-6" *ngIf="page">
             <div class="card">
