--- a/src/app/components/admin/admin-page/admin-page-new/admin-page-new.component.html
+++ b/src/app/components/admin/admin-page/admin-page-new/admin-page-new.component.html
@@ -7,7 +7,7 @@
     </div>
 </div>
 
-<div class="container">
+<div class="container mb-5">
     <div class="col-md-12">
         <div class="card">
             <div class="card-body">
