When creating user from admin ui, it is now added to firebase auth storage

--- a/src/app/components/admin/admin-page/admin-page-list/admin-page-list.component.html
+++ b/src/app/components/admin/admin-page/admin-page-list/admin-page-list.component.html
@@ -118,14 +118,14 @@
             <nav aria-label="Page navigation example">
                 <ul class="pagination">
                     <li class="page-item">
-                        <a class="page-link" [routerLink]="['/admin/users']" aria-label="Previous">
+                        <a class="page-link" [routerLink]="['/admin/pages']" aria-label="Previous">
                             <span aria-hidden="true">&laquo;</span>
                             <span class="sr-only">Previous</span>
                         </a>
                     </li>
-                    <li class="page-item"><a class="page-link" [routerLink]="['/admin/users']">1</a></li>
+                    <li class="page-item"><a class="page-link" [routerLink]="['/admin/pages']">1</a></li>
                     <li class="page-item">
-                        <a class="page-link" [routerLink]="['/admin/users']" aria-label="Next">
+                        <a class="page-link" [routerLink]="['/admin/pages']" aria-label="Next">
                             <span aria-hidden="true">&raquo;</span>
                             <span class="sr-only">Next</span>
                         </a>
