--- a/src/app/components/admin/admin-core/admin-reset-password/admin-reset-password.component.html
+++ b/src/app/components/admin/admin-core/admin-reset-password/admin-reset-password.component.html
@@ -1,18 +1,20 @@
+<!-- * ADMIN-RESET-PASSWORD * -->
 <div class="row mb-5 mt-5">
-    <div class="col-md-6 mx-auto">
-        <div class="card">
-            <div class="card-body">
-                <h1 class="text-center text-secondary pb-4 pt-3">
+  <div class="col-md-6 mx-auto">
+    <div class="card">
+      <div class="card-body">
+        <h1 class="text-center text-secondary pb-4 pt-3">
                     <span class="text-dark">
                <img src="https://s3.amazonaws.com/DDW/ddw-org/images/logos/ddw-color.png"
                     alt="ddw logo" class="ddw-logo" style="max-width:200px;"> <br>
-                        <i class="fa fa-user-lock"></i>&nbsp;Admin
-                    </span> Login
-                </h1>
-            </div>
-        </div>
+                        <i class="fa fa-envelope-open"></i>&nbsp;Admin
+                    </span> Reset Password
+        </h1>
+      </div>
     </div>
+  </div>
 </div>
+
 
 <div class="row">
     <div class="container">
@@ -21,27 +23,18 @@
                 <div class="card-body">
                     <!--<h2 class="card-title">Log In</h2>-->
                     <form [formGroup]="loginForm"
-                          (ngSubmit)="onLogin(loginForm.value)">
+                          (ngSubmit)="onSubmit(loginForm.value)">
                         <div class="form-group">
-                            <label>Email address</label>
+                            <label>Email Address</label>
                             <input type="email"
                                    class="form-control"
                                    formControlName="email">
                         </div>
 
-                        <div class="form-group">
-                            <label>Password</label>
-                            <input type="password"
-                                   class="form-control"
-                                   formControlName="password">
-                        </div>
-
                         <button type="submit"
-                                class="btn btn-primary"><i class="fa fa-unlock"></i>&nbsp;Login
+                                class="btn btn-primary"><i class="fa fa-share-square"></i>&nbsp;Send
                         </button>
                     </form>
-
-                    <p class="mt-5"><small>Forgot password? <a [routerLink]="['/admin/reset']">Reset</a>.</small></p>
                 </div>
             </div>
         </div>
