Debuged and made mobile view better for page cards

--- a/src/app/components/admin/admin-core/admin-reset-password/admin-reset-password.component.html
+++ b/src/app/components/admin/admin-core/admin-reset-password/admin-reset-password.component.html
@@ -22,8 +22,8 @@
             <div class="card">
                 <div class="card-body">
                     <!--<h2 class="card-title">Log In</h2>-->
-                    <form [formGroup]="loginForm"
-                          (ngSubmit)="onSubmit(loginForm.value)">
+                    <form [formGroup]="resetForm"
+                          (ngSubmit)="onSubmit(resetForm.value)">
                         <div class="form-group">
                             <label>Email Address</label>
                             <input type="email"
