--- a/src/app/components/admin/admin-page/admin-page-item/admin-page-item.component.css
+++ b/src/app/components/admin/admin-page/admin-page-item/admin-page-item.component.css
@@ -1,7 +1,10 @@
-.card {
-    max-width: 21rem;
-}
-
 a {
     text-decoration: none;
+}
+
+/* Small devices (landscape phones, 576px and up) */
+@media (max-width: 768px) {
+    .card {
+        max-width: 100%;
+    }
 }
