--- a/src/app/components/admin/admin-page/admin-page-list/admin-page-list.component.css
+++ b/src/app/components/admin/admin-page/admin-page-list/admin-page-list.component.css
@@ -1,3 +1,34 @@
 img.page-image {
     max-width: 25px;
 }
+
+/* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) {
+    .card-columns {
+        columns: 1;
+    }
+    .card {
+        width: 100%;
+    }
+}
+
+/*// Medium devices (tablets, 768px and up)*/
+@media (min-width: 768px) {
+    .card-columns {
+        columns: 2;
+    }
+}
+
+/*// Large devices (desktops, 992px and up)*/
+@media (min-width: 992px) {
+    .card-columns {
+        columns: 3;
+    }
+}
+
+/*// Extra large devices (large desktops, 1200px and up)*/
+@media (min-width: 1200px) {
+    .card-columns {
+        columns: 4;
+    }
+}
