--- a/src/app/components/admin/admin-user/admin-user-item/admin-user-item.component.html
+++ b/src/app/components/admin/admin-user/admin-user-item/admin-user-item.component.html
@@ -9,7 +9,7 @@
     <td scope="col">{{ user.displayName }}</td>
     <td scope="col">{{ user.loginDate | date:'fullDate' }}</td>
     <td scope="col">Online: {{ user.isOnline }}</td>
-    <td scope="col">Admin: {{ user.admin }}</td>
+    <td scope="col">Roles: {{ user.roles }}</td>
 
 </tr>
 <!--</a>-->
