--- a/src/app/components/admin/admin-user/admin-user-details/admin-user-details.component.html
+++ b/src/app/components/admin/admin-user/admin-user-details/admin-user-details.component.html
@@ -30,7 +30,8 @@
                             <i class="fa fa-trash"></i>&nbsp;Delete
                         </button>
                     </div>
-                    <img class="d-block ui-w-100 rounded-circle img-fluid" [src]="user.photoURL" [alt]="user.displayName">
+                    <img class="d-block ui-w-100 rounded-circle img-fluid" [src]="user.photoURL"
+                         [alt]="user.displayName">
 
                     <table class="table table-striped mt-4">
                         <tbody>
@@ -49,29 +50,37 @@
                         <tr>
                             <th scope="col">Admin</th>
                             <td>
-                            <span class="badge badge-outline-success"
-                                  *ngIf="user.admin">
-                                Yes
-                            </span>
+                                <span class="badge badge-outline-success"
+                                      *ngIf="user.roles[admin]">
+                                    Yes
+                                </span>
                                 <span class="badge badge-outline-danger"
-                                      *ngIf="!user.admin">
-                                No
-                            </span>
+                                      *ngIf="!user.roles[admin]">
+                                    No
+                                </span>
                             </td>
                         </tr>
                         <tr>
                             <th scope="col">Online</th>
                             <td>
-                            <span class="badge badge-outline-success"
-                                  *ngIf="user.isOnline">
-                               Yes
-                            </span>
+                                <span class="badge badge-outline-success"
+                                      *ngIf="user.isOnline">
+                                  Yes
+                                </span>
                                 <span class="badge badge-outline-danger"
                                       *ngIf="!user.isOnline">
-                                No
-                            </span>
+                                   No
+                                </span>
                             </td>
-
+                        </tr>
+                        <tr>
+                            <th scope="col">Permission</th>
+                            <td>
+                                <span class="badge badge-outline-primary"
+                                      *ngIf="user.roles">
+                                  {{ user.roles }}
+                                </span>
+                            </td>
                         </tr>
                         </tbody>
                     </table>
