--- a/src/app/components/admin/admin-user/admin-user-list/admin-user-list.component.html
+++ b/src/app/components/admin/admin-user/admin-user-list/admin-user-list.component.html
@@ -17,7 +17,7 @@
                         <th colspan="2">User</th>
                         <th scope="col">Last Online</th>
                         <th scope="col">Is Online</th>
-                        <th scope="col">Admin</th>
+                        <th scope="col">Roles</th>
                         <th scope="col">Options</th>
                     </tr>
                     </thead>
@@ -45,10 +45,10 @@
                                 </span>
                         </td>
                         <td scope="col" style="text-align:center;">
-                                <span class="badge badge-outline-success" *ngIf="user.admin">
+                                <span class="badge badge-outline-success" *ngIf="user.roles">
                                     Yes
                                 </span>
-                            <span class="badge badge-outline-danger" *ngIf="!user.admin">
+                            <span class="badge badge-outline-danger" *ngIf="!user.roles">
                                     No
                             </span>
                         </td>
