--- a/src/app/components/admin/admin-user/admin-user-new/admin-user-new.component.html
+++ b/src/app/components/admin/admin-user/admin-user-new/admin-user-new.component.html
@@ -51,11 +51,16 @@
                                formControlName="title">
                     </div>
 
-                    <div class="form-group form-check">
-                        <input type="checkbox"
-                               class="form-check-input"
-                               formControlName="admin">
-                        <label class="form-check-label">Admin User?</label>
+                    <div class="form-group">
+                        <label for="roles">Permission</label>
+                        <select class="form-control"
+                                id="roles"
+                                [class.invalid]="!f.roles.valid && f.roles.touched"
+                                formControlName="roles">
+                            <option>Subscriber</option>
+                            <option>Editor</option>
+                            <option>Admin</option>
+                        </select>
                     </div>
 
 
