--- a/src/app/components/admin/admin-core/admin-navbar/admin-navbar.component.html
+++ b/src/app/components/admin/admin-core/admin-navbar/admin-navbar.component.html
@@ -18,9 +18,14 @@
                         [routerLink]="['/admin/pages/new']"><i class="fa fa-file-plus"></i>&nbsp; New Page
                 </button>
             </li>
+            <li class="nav-item" *ngIf="isLoggedIn && dbUser.admin">
+                <button class="btn btn-default btn-sm float-right mt-2 mr-5"
+                        [routerLink]="['/admin/users/new']"><i class="fa fa-user"></i>&nbsp; New User
+                </button>
+            </li>
             <li class="nav-item" *ngIf="isLoggedIn">
                 <a class="nav-link"
-                   [routerLink]="['/admin/users/', uid ]">
+                   [routerLink]="['/admin/users/', dbUser.uid ]">
                     <i class="fa fa-user-alt"></i>&nbsp;{{ loggedInUser }}
                 </a>
             </li>
