--- a/src/app/components/admin/admin-user/admin-user-new/admin-user-new.component.html
+++ b/src/app/components/admin/admin-user/admin-user-new/admin-user-new.component.html
@@ -53,9 +53,11 @@
 
                     <div class="form-group form-check">
                         <input type="checkbox"
+                               id="admin"
                                class="form-check-input"
                                formControlName="admin">
-                        <label class="form-check-label">Admin User?</label>
+                        <label for="admin"
+                               class="form-check-label">Admin User?</label>
                     </div>
 
 
