--- a/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.css
+++ b/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.css
@@ -1,3 +1,7 @@
+a.back-pages {
+    text-decoration: none;
+}
+
 input.custom-control-input,
 label.custom-control-label {
     cursor: pointer;
@@ -14,24 +18,6 @@ i.fa-cloud-upload-alt {
 .hovering {
     background-color: #999999;
 }
-
-/* Dropzone */
-/*.dropzone {*/
-/*display: flex;*/
-/*align-items: center;*/
-/*justify-content: center;*/
-/*flex-direction: column;*/
-/*height: 300px;*/
-/*border: 2px dashed #f16624;*/
-/*border-radius: 5px;*/
-/*background: white;*/
-/*margin: 10px 0;*/
-/*}*/
-
-/*.dropzone.hovering {*/
-/*border: 2px solid #f16624;*/
-/*color: #dadada !important;*/
-/*}*/
 
 progress::-webkit-progress-value {
     transition: width 0.1s ease;
