--- a/src/app/components/admin/admin-page/admin-page-new/admin-page-new.component.html
+++ b/src/app/components/admin/admin-page/admin-page-new/admin-page-new.component.html
@@ -49,6 +49,10 @@
                                bsDatepicker
                                [class.invalid]="!f.date.valid && f.date.touched"
                                formControlName="date">
+                        <p class="help-block alert alert-warning text-center mt-1"
+                           *ngIf="!f.date.valid && f.date.touched">
+                            <b>Date</b> is required!
+                        </p>
                     </div>
 
 
@@ -82,6 +86,7 @@
                     <div class="form-group">
                         <label>Body</label>
                         <ckeditor formControlName="body"
+                                  [class.invalid]="!f.body.valid && f.body.touched"
                                   [readonly]="false"
                                   debounce="500">
                         </ckeditor>
@@ -98,9 +103,9 @@
                     <div class="form-group">
                         <div class="card">
                             <div class="card-body">
-                                <div class="card-title">
+                                <p class="card-title">
                                     Image Uploader
-                                </div>
+                                </p>
                                 <div class="row">
                                     <div class="col-sm-6">
                                         <div class="custom-file">
@@ -130,7 +135,7 @@
                                             <p><img [src]="url" style="max-width:100px;"></p>
                                         </div>
                                         <ng-template #loadingURL>
-                                            <p class="text-center text-secondary">
+                                            <p class="text-center text-light">
                                                 Upload Image, Then a URL will appear here. Copy and paste that link
                                                 into Image URL below to use.
                                             </p>
