--- a/src/app/components/admin/admin-core/admin-settings/admin-settings.component.html
+++ b/src/app/components/admin/admin-core/admin-settings/admin-settings.component.html
@@ -17,72 +17,83 @@
 
 <div class="row">
     <div class="container">
-        <div class="col-md-12">
-            <div class="card">
-                <div class="card-body">
-                    <form #settingsForm="ngForm"
-                          (ngSubmit)="onSettingsSubmit(settingsForm)">
+        <div class="card">
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-md-6">
+                        <form #settingsForm="ngForm"
+                              (ngSubmit)="onSettingsSubmit(settingsForm)">
 
+                            <div class="form-group">
+                                <div class="form-group form-check">
+                                    <input type="checkbox"
+                                           id="allowSignup"
+                                           class="form-check-input"
+                                           name="allowSignup"
+                                           [checked]="settings.allowSignup"
+                                           [(ngModel)]="allowSignup"
+                                           #allowSign="ngModel">
 
-                        <div class="form-group">
-                            <div class="form-group form-check">
-                                <input type="checkbox"
-                                       id="allowSignup"
-                                       class="form-check-input"
-                                       name="allowSignup"
-                                       [checked]="settings.allowSignup"
-                                       [(ngModel)]="allowSignup"
-                                       #allowSign="ngModel">
-
-                                <label class="form-check-label"
-                                       for="allowSignup"
-                                       (change)="allowSignup = !allowSignup">
-                                    Allow User Registration?
-                                </label>
+                                    <label class="form-check-label"
+                                           for="allowSignup"
+                                           (change)="allowSignup = !allowSignup">
+                                        Allow User Registration?
+                                    </label>
+                                </div>
                             </div>
-                        </div>
 
-                        <div class="form-group">
-                            <div class="form-group form-check">
-                                <input type="checkbox"
-                                       id="allowSettings"
-                                       class="form-check-input"
-                                       name="allowSettings"
-                                       [checked]="settings.allowSettings"
-                                       [(ngModel)]="allowSettings"
-                                       #allowSet="ngModel">
+                            <div class="form-group">
+                                <div class="form-group form-check">
+                                    <input type="checkbox"
+                                           id="allowSettings"
+                                           class="form-check-input"
+                                           name="allowSettings"
+                                           [checked]="settings.allowSettings"
+                                           [(ngModel)]="allowSettings"
+                                           #allowSet="ngModel">
 
-                                <label class="form-check-label"
-                                       for="allowSettings"
-                                       (change)="allowSettings = !allowSettings">
-                                    Allow this page to be editable?
-                                </label>
+                                    <label class="form-check-label"
+                                           for="allowSettings"
+                                           (change)="allowSettings = !allowSettings">
+                                        Allow this page to be editable?
+                                    </label>
+                                </div>
                             </div>
-                        </div>
 
 
-                        <div class="form-group">
-                            <div class="form-group form-check">
-                                <input type="checkbox"
-                                       id="disableAdmin"
-                                       class="form-check-input"
-                                       name="disableAdmin"
-                                       [checked]="settings.disableAdmin"
-                                       [(ngModel)]="disableAdmin"
-                                       #disableAd="ngModel">
+                            <div class="form-group">
+                                <div class="form-group form-check">
+                                    <input type="checkbox"
+                                           id="disableAdmin"
+                                           class="form-check-input"
+                                           name="disableAdmin"
+                                           [checked]="settings.disableAdmin"
+                                           [(ngModel)]="disableAdmin"
+                                           #disableAd="ngModel">
 
-                                <label class="form-check-label"
-                                       for="disableAdmin"
-                                       (change)="disableAdmin = !disableAdmin">
-                                    Disable Admin?
-                                </label>
+                                    <label class="form-check-label"
+                                           for="disableAdmin"
+                                           (change)="disableAdmin = !disableAdmin">
+                                        Disable Admin?
+                                    </label>
+                                </div>
                             </div>
+
+
+                            <button type="submit" class="btn btn-primary">
+                                <i class="fa fa-wrench"></i>&nbsp;Save Settings
+                            </button>
+
+                        </form>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="text-center">
+                            <a [routerLink]="['/admin/meta']"
+                               class="btn btn-outline-dark">
+                                <i class="fa fa-chart-line"></i>&nbsp;Edit Meta/Scripts
+                            </a>
                         </div>
-
-
-                        <button type="submit" class="btn btn-primary"><i class="fa fa-wrench"></i>&nbsp;Save Settings
-                        </button>
-                    </form>
+                    </div>
                 </div>
             </div>
         </div>
