--- a/src/app/components/admin/admin-core/admin-sidenav/admin-sidenav.component.html
+++ b/src/app/components/admin/admin-core/admin-sidenav/admin-sidenav.component.html
@@ -27,18 +27,18 @@
         *ngIf="isLoggedIn">
         <a class="sidenav-link sidenav-toggle" (click)="onShowPagesToggle()">
             <i class="sidenav-icon ion ion-ios-albums"></i>
-            <div><i class="fa fa-file"></i>&nbsp;Pages</div>
+            <div><i class="fal fa-file"></i>&nbsp;Pages</div>
         </a>
 
         <ul class="sidenav-menu">
             <li class="sidenav-item sub-item">
                 <a [routerLink]="['/admin/pages']" class="sidenav-link">
-                    <div><i class="fa fa-th-list"></i>&nbsp;All Pages</div>
+                    <div><i class="fal fa-th-list"></i>&nbsp;All Pages</div>
                 </a>
             </li>
             <li class="sidenav-item sub-item">
                 <a [routerLink]="['/admin/pages/new']" class="sidenav-link">
-                    <div><i class="fa fa-file-plus"></i>&nbsp;New Page</div>
+                    <div><i class="fal fa-file-plus"></i>&nbsp;New Page</div>
                 </a>
             </li>
         </ul>
@@ -50,18 +50,18 @@
         *ngIf="isLoggedIn">
         <a class="sidenav-link sidenav-toggle" (click)="onShowUsersToggle()">
             <i class="sidenav-icon ion ion-md-speedometer"></i>
-            <div><i class="fa fa-users"></i>&nbsp;Users</div>
+            <div><i class="fal fa-users"></i>&nbsp;Users</div>
         </a>
 
         <ul class="sidenav-menu">
             <li class="sidenav-item sub-item">
                 <a [routerLink]="['/admin/users']" class="sidenav-link">
-                    <div><i class="fa fa-th-list"></i>&nbsp;All Users</div>
+                    <div><i class="fal fa-th-list"></i>&nbsp;All Users</div>
                 </a>
             </li>
             <li class="sidenav-item sub-item">
                 <a [routerLink]="['/admin/users/new']" class="sidenav-link">
-                    <div><i class="fa fa-user-plus"></i>&nbsp;New User</div>
+                    <div><i class="fal fa-user-plus"></i>&nbsp;New User</div>
                 </a>
             </li>
         </ul>
@@ -75,13 +75,20 @@
     <li class="sidenav-item" *ngIf="isLoggedIn && allowSignup">
         <a [routerLink]="['/admin/settings']" class="sidenav-link">
             <i class="sidenav-icon ion ion-md-quote"></i>
-            <div><i class="fa fa-wrench"></i>&nbsp;Settings</div>
+            <div><i class="fal fa-wrench"></i>&nbsp;Settings</div>
+        </a>
+    </li>
+
+    <li class="sidenav-item" *ngIf="isLoggedIn && allowSignup">
+        <a [routerLink]="['/admin/meta']" class="sidenav-link">
+            <i class="sidenav-icon ion ion-md-quote"></i>
+            <div><i class="fal fa-chart-line"></i>&nbsp;Scripts</div>
         </a>
     </li>
     <li class="sidenav-item">
         <a class="sidenav-link" [routerLink]="['/']" target="_blank">
             <i class="sidenav-icon ion ion-md-quote"></i>
-            <div><i class="fa fa-laptop"></i>&nbsp;Live Site</div>
+            <div><i class="fal fa-laptop"></i>&nbsp;Live Site</div>
         </a>
     </li>
 
@@ -91,14 +98,14 @@
         <a class="sidenav-link"
            (click)="onLogout()">
             <i class="sidenav-icon ion ion-md-quote"></i>
-            <div><i class="fa fa-sign-out-alt"></i>&nbsp;Logout</div>
+            <div><i class="fal fa-sign-out-alt"></i>&nbsp;Logout</div>
         </a>
     </li>
 
     <li class="sidenav-item" *ngIf="!isLoggedIn">
         <a [routerLink]="['/admin/login']" class="sidenav-link">
             <i class="sidenav-icon ion ion-md-quote"></i>
-            <div><i class="fa fa-sign-in-alt"></i>&nbsp;Log In</div>
+            <div><i class="fal fa-sign-in-alt"></i>&nbsp;Log In</div>
         </a>
     </li>
 </ul>
