cleaned up after adding SEO snippet input

--- a/src/app/components/admin/admin-core/admin-sidenav/admin-sidenav.component.html
+++ b/src/app/components/admin/admin-core/admin-sidenav/admin-sidenav.component.html
@@ -27,13 +27,13 @@
         *ngIf="isLoggedIn">
         <a class="sidenav-link sidenav-toggle" (click)="onShowPagesToggle()">
             <i class="sidenav-icon ion ion-ios-albums"></i>
-            <div><i class="fal fa-file"></i>&nbsp;Pages</div>
+            <div><i class="fal fa-copy"></i>&nbsp;Pages</div>
         </a>
 
         <ul class="sidenav-menu">
             <li class="sidenav-item sub-item">
                 <a [routerLink]="['/admin/pages']" class="sidenav-link">
-                    <div><i class="fal fa-th-list"></i>&nbsp;All Pages</div>
+                    <div><i class="fal fa-copy"></i>&nbsp;All Pages</div>
                 </a>
             </li>
             <li class="sidenav-item sub-item">
@@ -56,7 +56,7 @@
         <ul class="sidenav-menu">
             <li class="sidenav-item sub-item">
                 <a [routerLink]="['/admin/users']" class="sidenav-link">
-                    <div><i class="fal fa-th-list"></i>&nbsp;All Users</div>
+                    <div><i class="fal fa-users"></i>&nbsp;All Users</div>
                 </a>
             </li>
             <li class="sidenav-item sub-item">
