--- a/src/app/components/admin/admin-core/admin-meta/admin-meta.component.css
+++ b/src/app/components/admin/admin-core/admin-meta/admin-meta.component.css
@@ -1,7 +1,7 @@
 pre > textarea {
-    font-size: 12px;
+    font-size: 13px;
     font-family: 'Menlo', 'SF Mono', 'Roboto Mono', 'consolas', monospace;
     background-color: #2b2b2b;
-    color: #a9b5c6;
-
+    color: #a9b7c6;
+    letter-spacing: 1px;
 }
