--- a/src/app/components/admin/admin-core/admin-meta/admin-meta.component.html
+++ b/src/app/components/admin/admin-core/admin-meta/admin-meta.component.html
@@ -1,4 +1,4 @@
-<div class="row mb-5 mt-5">
+<div class="row mb-5 mt-3">
     <div class="col-md-6 mx-auto">
         <div class="card">
             <div class="card-body">
@@ -30,23 +30,23 @@
                             </label>
 
                             <pre>
-                                <textarea type="text"
-                                          rows="10"
-                                          class="form-control"
-                                          placeholder="Enter header scripts here..."
-                                          [(ngModel)]="meta.headerArea"
-                                          formControlName="headerArea">
+                                 <textarea type="text"
+                                           rows="13"
+                                           class="form-control"
+                                           placeholder="Enter header scripts here..."
+                                           [(ngModel)]="meta.headerArea"
+                                           formControlName="headerArea">
                                 </textarea>
                              </pre>
                         </div>
 
                         <div class="form-group">
                             <label>SEO Meta Tags <br>
-                                <small>(Between header tags after header scripts)</small>
+                                <small>(Bottom of header tags)</small>
                             </label>
                             <pre>
                                 <textarea type="text"
-                                          rows="10"
+                                          rows="13"
                                           class="form-control"
                                           placeholder="Insert your meta tags here..."
                                           [(ngModel)]="meta.seo"
@@ -61,7 +61,7 @@
                             </label>
                             <pre>
                                 <textarea type="text"
-                                          rows="10"
+                                          rows="13"
                                           class="form-control"
                                           placeholder="Enter footer scripts here..."
                                           [(ngModel)]="meta.footerArea"
