--- a/src/app/components/admin/admin-core/admin-settings/admin-settings.component.html
+++ b/src/app/components/admin/admin-core/admin-settings/admin-settings.component.html
@@ -87,10 +87,16 @@
                         </form>
                     </div>
                     <div class="col-md-6">
-                        <div class="text-center">
+                        <div class="text-right m-2">
                             <a [routerLink]="['/admin/meta']"
-                               class="btn btn-outline-dark">
+                               class="btn btn-outline-primary borderless">
                                 <i class="fa fa-chart-line"></i>&nbsp;Edit Meta/Scripts
+                            </a>
+                        </div>
+                        <div class="text-right m-2">
+                            <a [routerLink]="['/admin/ads']"
+                               class="btn btn-outline-primary borderless">
+                                <i class="fa fa-money-bill-wave"></i>&nbsp;Edit Advertising Scripts
                             </a>
                         </div>
                     </div>
